--- a/index.html
+++ b/index.html
@@ -58,5 +58,9 @@
             </div>
         </div>
     </main>
+    <script type="text/javascript" src="javascript/coins.js"></script>
+    <script type="text/javascript" src="javascript/player.js"></script>
+    <script type="text/javascript" src="javascript/game.js"></script>
+    <script type="text/javascript" src="javascript/script.js"></script>
 </body>
 </html>
