first screen kind of done

--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
     <title>Niffler Loot</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap');
+    </style>
 </head>
 <body>
     <main>
         <!-- Screen 1: Game Intro -->
         <div id = "game-intro">
-            <img class="logo-img" src="images/Niffler.png" alt="Niffler">
-            <br>
-            <h1>Niffler’s Loot</h1>
-            <p>You’ve got a Niffler—a furry little loot goblin with a nose for treasure and zero self-control. 
-                But in a world of gold and glitter, not everything is worth grabbing. 
-                Do you know how to loot wisely?</p>
-            <button id = "how-to-loot">How to loot</button>
+            <img class = "title-img" src="./Images2/Game_Title.png" alt="Niffler Title">   
+            <img class="logo-img" src="./Images2/Standing_Niffler.png" alt="Niffler"> 
+            <button class="button" id = "how-to-loot">How to loot</button>
         </div>
 
         <!-- Screen 3: Game Instruction -->
